--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="hero-text">
   	  	    <h1>Tribe</h1>
     <p>Find Your People</p>
-    <button><a href="sign-in.html">Sign Up</a></button>
+    <button><a href="sign-in.html">Sign  me Up</a></button>
   </div>
 </div>
  <div class="site-info"> Info about the site</div>
