--- a/activities.html
+++ b/activities.html
@@ -43,7 +43,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img src="../Tribe/assets/images/park.jpg" alt="Avatar" style="width:290px;height:300px;">
+  		<img src="../Tribe/assets/images/park.webp" alt="Avatar" style="width:290px;height:300px;">
   		<div>
   			<p>Park Meetup-up</p>
   		</div>
@@ -77,7 +77,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img src="../Tribe/assets/images/coffee.jpg" alt="Avatar" style="width:290px;height:300px;">
+  		<img src="../Tribe/assets/images/coffee.webp" alt="Avatar" style="width:290px;height:300px;">
   		<div>
   			<p>Coffee Meet-up</p>
   		</div>
@@ -111,7 +111,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img src="../Tribe/assets/images/adults.jpg" alt="Avatar" style="width:290px;height:300px;">
+  		<img src="../Tribe/assets/images/adults.webp" alt="Avatar" style="width:290px;height:300px;">
   		<div>
   			<p>Adults Only Meet-up</p>
   		</div>
@@ -148,7 +148,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img src="../Tribe/assets/images/beach.jpg" alt="Avatar" style="width:290px;height:300px;">
+  		<img src="../Tribe/assets/images/beach.webp" alt="Avatar" style="width:290px;height:300px;">
   		<div>
   			<p>Beach Meet-up</p>
   		</div>
@@ -182,7 +182,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img src="../Tribe/assets/images/dinner.jpg" alt="Avatar" style="width:290px;height:300px;">
+  		<img src="../Tribe/assets/images/dinner.webp" alt="Avatar" style="width:290px;height:300px;">
   		<div>
   			<p>Dinner and Cocktails Meetup</p>
   		</div>
@@ -216,7 +216,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img src="../Tribe/assets/images/comedy.jpg" alt="Avatar" style="width:290px;height:300px;">
+  		<img src="../Tribe/assets/images/comedy.webp" alt="Avatar" style="width:290px;height:300px;">
   		<div>
   			<p>Comedy Night Meetup</p>
   		</div>
