--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
  <div class="site-info"> Info about the site</div>
 <div class="flex-container">
   <div>
-  	<div><img src="../Tribe/assets/images/coffee.jpg" alt="Avatar" style="width:290px;height:300px;"></div>
+  	<div><img src="../Tribe/assets/images/coffee.webp" alt="Avatar" style="width:290px;height:300px;"></div>
   	<div class="activity-info">Coffee Meet-up</div>
   </div>
   <div>
-  	<div> <img src="../Tribe/assets/images/dinner.jpg" alt="Avatar" style="width:290px;height:300px;"></div>
+  	<div> <img src="../Tribe/assets/images/dinner.webp" alt="Avatar" style="width:290px;height:300px;"></div>
   	<div class="activity-info"> Dinner and Cocktails Meetup</div>
   </div>
   <div>
-  	<div><img src="../Tribe/assets/images/beach.jpg" alt="Avatar" style="width:290px;height:300px;"></div>
+  	<div><img src="../Tribe/assets/images/beach.webp" alt="Avatar" style="width:290px;height:300px;"></div>
   	<div class="activity-info"> Beach Meet-up</div>
   </div>
 </div>
