--- a/activities.html
+++ b/activities.html
@@ -4,14 +4,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
+	<link rel="stylesheet" type="text/css" href="..\Tribe\assets\style.css">
 	 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
    crossorigin=""/>
    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
    crossorigin=""></script>
-   <link rel="stylesheet" href="..\Tribe\map.js">
-	<link rel="stylesheet" type="text/css" href="..\Tribe\assets\style.css">
 	<title>Tribe</title>
 	</head>
 <body>
@@ -246,6 +245,7 @@
   </div>
 </div> 
 </div>
+<script src="map.js"></script>
 
 <!--footer-->
  <footer>
