edited activities on activities page, added form for activities submission

--- a/activities.html
+++ b/activities.html
@@ -33,13 +33,15 @@
 <div class="site-info"> Activities </div>
 
 <!--Container for map-->
+
 <div id="map"></div>
 
-<!--container for activities row 1-->
-<div class="flex-container">
 
+<!--container for activities row 1-->
+<div class="outerContainer">
+<div class="container1">
 <!--first card -->
-<div class="flip-card">
+<div class="flip-card" id="apart1">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
   		<img src="../Tribe/assets/images/park.webp" alt="Avatar" style="width:290px;height:300px;">
@@ -71,9 +73,8 @@
     </div>
   </div>
 </div> 
-
 <!---second card-->
-<div class="flip-card">
+<div class="flip-card" id="apart2">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
   		<img src="../Tribe/assets/images/coffee.webp" alt="Avatar" style="width:290px;height:300px;">
@@ -86,41 +87,7 @@
       <table>
        		<tr>
     				<td class="table-data">Location -</td>
-    				<td class="table-data">Capstone Park</td>
-    				</tr>
-    				<tr>
-    				<td class="table-data">Date -</td>
-    				<td class="table-data">3rd Aug 2023</td>
-    				</tr>
-    				<tr>
-    				<td class="table-data">Time -</td>
-    				<td class="table-data">11am</td>
-    				</tr>
-    				<tr>
-    				<td class="table-data">Meeting Point -</td>
-    				<td class="table-data">Coffee shop</td>
-    				</tr>
-				</table>
-				<p> Join us with the kids for a play in the park </p>
-    </div>
-  </div>
-</div> 
-
-<!--third card-->
-<div class="flip-card">
-  <div class="flip-card-inner">
-  	<div class="flip-card-front">
-  		<img src="../Tribe/assets/images/adults.webp" alt="Avatar" style="width:290px;height:300px;">
-  		<div>
-  			<p>Adults Only Meet-up</p>
-  		</div>
-        </div>
-    <div class="flip-card-back">
-      <h2>Adults Only Meet-up</h2>
-      <table>
-       		<tr>
-    				<td class="table-data">Location -</td>
-    				<td class="table-data">Capstone Park</td>
+    				<td class="table-data">George Vaults</td>
     				</tr>
     				<tr>
     				<td class="table-data">Date -</td>
@@ -141,20 +108,22 @@
 </div> 
 </div>
 
-<!--container for activities row 1-->
-<div class="flex-container">
+<!--container for activities row 2-->
+<!--third card-->
+
+<div class="container1">
 <!--first card -->
-<div class="flip-card">
+<div class="flip-card" id="apart1">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img src="../Tribe/assets/images/beach.webp" alt="Avatar" style="width:290px;height:300px;">
+  		<img src="../Tribe/assets/images/adults.webp" alt="Avatar" style="width:290px;height:300px;">
   		<div>
-  			<p>Beach Meet-up</p>
+  			<p>Adults Only Meetup-up</p>
   		</div>
         </div>
     <div class="flip-card-back">
-      <h2>Beach Meet-up</h2>
-      <table>
+      <h2>Adults Only Meet Up</h2>
+       	<table>
        		<tr>
     				<td class="table-data">Location -</td>
     				<td class="table-data">Capstone Park</td>
@@ -176,9 +145,46 @@
     </div>
   </div>
 </div> 
-
 <!---second card-->
-<div class="flip-card">
+<div class="flip-card" id="apart2">
+  <div class="flip-card-inner">
+  	<div class="flip-card-front">
+  		<img src="../Tribe/assets/images/beach.webp" alt="Avatar" style="width:290px;height:300px;">
+  		<div>
+  			<p>Beach Meet-up</p>
+  		</div>
+        </div>
+    <div class="flip-card-back">
+      <h2>Beach Meet Up</h2>
+      <table>
+       		<tr>
+    				<td class="table-data">Location -</td>
+    				<td class="table-data">George Vaults</td>
+    				</tr>
+    				<tr>
+    				<td class="table-data">Date -</td>
+    				<td class="table-data">3rd Aug 2023</td>
+    				</tr>
+    				<tr>
+    				<td class="table-data">Time -</td>
+    				<td class="table-data">11am</td>
+    				</tr>
+    				<tr>
+    				<td class="table-data">Meeting Point -</td>
+    				<td class="table-data">Coffee shop</td>
+    				</tr>
+				</table>
+				<p> Join us with the kids for a play in the park </p>
+    </div>
+  </div>
+</div> 
+</div>
+
+<!--container for activities row 3-->
+<!---second card-->
+
+<div class="container1">
+<div class="flip-card" id="apart5">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
   		<img src="../Tribe/assets/images/dinner.webp" alt="Avatar" style="width:290px;height:300px;">
@@ -191,7 +197,7 @@
       <table>
        		<tr>
     				<td class="table-data">Location -</td>
-    				<td class="table-data">Capstone Park</td>
+    				<td class="table-data">Darjeling Heights</td>
     				</tr>
     				<tr>
     				<td class="table-data">Date -</td>
@@ -212,7 +218,7 @@
 </div>
 
 <!--third card-->
-<div class="flip-card">
+<div class="flip-card" id="apart6">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
   		<img src="../Tribe/assets/images/comedy.webp" alt="Avatar" style="width:290px;height:300px;">
@@ -225,7 +231,7 @@
       <table>
        		<tr>
     				<td class="table-data">Location -</td>
-    				<td class="table-data">Capstone Park</td>
+    				<td class="table-data">Nucleus Arts Centre</td>
     				</tr>
     				<tr>
     				<td class="table-data">Date -</td>
@@ -245,6 +251,29 @@
   </div>
 </div> 
 </div>
+</div>
+
+<!-- form for submitting activity request-->
+
+<button class="accordion">Section 1</button>
+<div class="panel">
+  <form action="https://formdump.codeinstitute.net/" method='post'>
+   <label for="name">Your name:</label> <br>
+  <input type="text" id="name" name="name" value="First name" required> <input type="text" id="name" name="name" value="Last name" required><br>  
+  <label for="activityName">Activity title:</label><br>
+  <input type="text" id="activityName" name="activityName" value="Beach Trip" required><br>
+  <label for="activityDate">Activity date:</label><br>
+  <input type="date" id="activityDate" name="activityDate" value="23rd Aug 2023" required>
+  <label for="activityTIme">Activity time:</label>
+  <input type="time" id="activityTime" name="activityTime" value="10am" required><br>
+  <label for="activityLocation">Activity location:</label><br>
+  <input type="text" id="activityLocation" name="activityLocation" value="Maidstone" required><br>
+  <label for="activityDetails">Activity details:</label><br>
+  <textarea id='activityDetails' cols='50' rows='10' name='activityDetails' placeholder='Add further details of the activity' required></textarea><br><br>
+  <input type="submit" value="Submit">
+</form>
+</div>
+
 <script src="map.js"></script>
 
 <!--footer-->
