--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
   </div>
 </div>
  <div class="site-info"> Info about the site</div>
-<div class="flex-container">
-  <div>
+<div>
+  <div  class="container">
   	<div><img src="../Tribe/assets/images/coffee.webp" alt="Avatar" style="width:290px;height:300px;"></div>
   	<div class="activity-info">Coffee Meet-up</div>
   </div>
-  <div>
+  <div  class="container">
   	<div> <img src="../Tribe/assets/images/dinner.webp" alt="Avatar" style="width:290px;height:300px;"></div>
   	<div class="activity-info"> Dinner and Cocktails Meetup</div>
   </div>
-  <div>
+  <div  class="container">
   	<div><img src="../Tribe/assets/images/beach.webp" alt="Avatar" style="width:290px;height:300px;"></div>
   	<div class="activity-info"> Beach Meet-up</div>
   </div>
