edits to sign up forms. removal of sign-up page. updates to the readme file.

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 	</head>
 
 <body>
+	<!-- nav bar-->
 	<div>
 		<ul>
   <li><a href="about.html">About</a></li>
-  <li><a href="sign-in.html">Sign-up/in</a></li>
   <li><a href="activities.html">Activities</a></li>
   <li><a href="index.html">Home</a></li>
 </ul>
 </div>
+
+<!-- Hero image text and link-->
 	<div class="hero-image">
   <div class="hero-text">
   	  	    <h1>Tribe</h1>
@@ -24,20 +26,36 @@
     <button><a href="sign-in.html">Sign  me Up</a></button>
   </div>
 </div>
+
+<!-- introduction text -->
  <div class="site-info"> Info about the site</div>
-<div>
-  <div  class="container">
+
+ <!--August HIghlights -->
+
+ <div>
+ 	<div class="augustHighlights">
+ 		<h2>Top Picks For August </h2>
+ 	</div>
+ </div>
+
+<!-- featured activities coming up -->
+<div class="featuredContainerOuter">	
+  <div  class="featuredContainer">
   	<div><img src="../Tribe/assets/images/coffee.webp" alt="Avatar" style="width:290px;height:300px;"></div>
   	<div class="activity-info">Coffee Meet-up</div>
+  	<div class="findOutMore"><a href="activities.html">Find out more</a></div>
   </div>
-  <div  class="container">
+  <div  class="featuredContainer">
   	<div> <img src="../Tribe/assets/images/dinner.webp" alt="Avatar" style="width:290px;height:300px;"></div>
   	<div class="activity-info"> Dinner and Cocktails Meetup</div>
+  	<div class="findOutMore"><a href="activities.html">Find out more</a></div>
   </div>
-  <div  class="container">
+  <div  class="featuredContainer">
   	<div><img src="../Tribe/assets/images/beach.webp" alt="Avatar" style="width:290px;height:300px;"></div>
   	<div class="activity-info"> Beach Meet-up</div>
+  	<div class="findOutMore"><a href="activities.html">Find out more</a></div>
   </div>
+
 </div>
 <footer>
 	<div class="site-info"> created by Adelle King</div>
