--- a/activities.html
+++ b/activities.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
 	<link rel="stylesheet" type="text/css" href="..\Tribe\assets\style.css">
 	 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
    crossorigin=""/>
+   <script src="https://kit.fontawesome.com/e893473805.js" crossorigin="anonymous"></script>
    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
    crossorigin=""></script>
@@ -17,7 +17,6 @@
 	<div>
 		<ul>
   <li><a href="about.html">About</a></li>
-  <li><a href="sign-in.html">Sign-up/in</a></li>
   <li><a href="activities.html">Activities</a></li>
   <li><a href="index.html">Home</a></li>
 </ul>
@@ -254,10 +253,9 @@
 </div>
 
 <!-- form for submitting activity request-->
-
-<button class="accordion">Section 1</button>
-<div class="panel">
-  <form action="https://formdump.codeinstitute.net/" method='post'>
+<h2 class="formHeader">Have an activity you want others to join? Submit it here <i class="fa-solid fa-arrow-turn-down"></i> </h2>
+<div class="form">
+	 <form class="formContents" action="https://formdump.codeinstitute.net/" method='post'>
    <label for="name">Your name:</label> <br>
   <input type="text" id="name" name="name" value="First name" required> <input type="text" id="name" name="name" value="Last name" required><br>  
   <label for="activityName">Activity title:</label><br>
@@ -270,7 +268,7 @@
   <input type="text" id="activityLocation" name="activityLocation" value="Maidstone" required><br>
   <label for="activityDetails">Activity details:</label><br>
   <textarea id='activityDetails' cols='50' rows='10' name='activityDetails' placeholder='Add further details of the activity' required></textarea><br><br>
-  <input type="submit" value="Submit">
+  <input class="formSubmit" type="submit" value="Submit">
 </form>
 </div>
 
