--- a/sign-in.html
+++ b/sign-in.html
@@ -12,7 +12,6 @@
 	<div>
 		<ul>
   <li><a href="about.html">About</a></li>
-  <li><a href="sign-in.html">Sign-up/in</a></li>
   <li><a href="activities.html">Activities</a></li>
   <li><a href="index.html">Home</a></li>
 </ul>
@@ -21,24 +20,32 @@
   <div class="hero-text">
   	  	    <h1>Tribe</h1>
     <p>Find Your People</p>
-    <button><a href="sign-in.html">Sign Up</a></button>
-  </div>
+    </div>
 </div>
- <div class="site-info"> Sign up/in</div>
-<div class="flex-container">
-  <div class="border">
-  	<div class="activity-title"> Activity 1</div>
-  	<div class="activity-info"> text for activity 1</div>
-  </div>
-  <div class="border">
-  	<div class="activity-title"> Activity 2</div>
-  	<div class="activity-info"> text for activity 2</div>
-  </div>
-  <div class="border">
-  	<div class="activity-title"> Activity 3</div>
-  	<div class="activity-info"> text for activity 3</div>
-  </div>
+ 
+ 
+ <h2 class="formHeader1">Join Tribe today<i class="fa-solid fa-arrow-turn-down"></i> </h2>
+ <p>Here at Tribe we thrive on building relationships and communities. From local friendships, travel buddies, business netowrking and cultural awareness - TRIBE offers it all. </p>
+ <p> membership is free and gives you access to:<br> <i class="fa-regular fa-star"></i> User 
+
+<div class="form1">
+    <form class="innerForm" action="https://formdump.codeinstitute.net/" method='post'>
+   <label for="name">Your name:</label> <br>
+  <input type="text" id="name" name="name" value="First name" required> <input type="text" id="name" name="name" value="Last name" required><br>  
+  <label for="activityName">Activity title:</label><br>
+  <input type="text" id="activityName" name="activityName" value="Beach Trip" required><br>
+  <label for="activityDate">Activity date:</label><br>
+  <input type="date" id="activityDate" name="activityDate" value="23rd Aug 2023" required>
+  <label for="activityTIme">Activity time:</label>
+  <input type="time" id="activityTime" name="activityTime" value="10am" required><br>
+  <label for="activityLocation">Activity location:</label><br>
+  <input type="text" id="activityLocation" name="activityLocation" value="Maidstone" required><br>
+  <label for="activityDetails">Activity details:</label><br>
+  <textarea id='activityDetails' cols='50' rows='10' name='activityDetails' placeholder='Add further details of the activity' required></textarea><br><br>
+  <input class="formSubmit" type="submit" value="Submit">
+</form>
 </div>
+
 
 <footer>
 	<div class="site-info"> created by Adelle King</div>
