changed layout of about page. Aligned activities boxes on index page.

--- a/about.html
+++ b/about.html
@@ -20,23 +20,12 @@
   <div class="hero-text">
   	  	    <h1>Tribe</h1>
     <p>Find Your People</p>
-    <button><a href="sign-in.html">Sign Up</a></button>
-  </div>
+    </div>
 </div>
- <div class="site-info"> About page</div>
-<div class="flex-container">
-  <div class="border">
-  	<div class="activity-title"> Activity 1</div>
-  	<div class="activity-info"> text for activity 1</div>
-  </div>
-  <div class="border">
-  	<div class="activity-title"> Activity 2</div>
-  	<div class="activity-info"> text for activity 2</div>
-  </div>
-  <div class="border">
-  	<div class="activity-title"> Activity 3</div>
-  	<div class="activity-info"> text for activity 3</div>
-  </div>
+ 
+<div class="activitiesBox">
+  <div class="box1"></div>
+  <div class="box2"></div>
 </div>
 
 <footer>
