updates to the readme, about and activities pages. Added new photo to the about me pages

--- a/activities.html
+++ b/activities.html
@@ -254,17 +254,17 @@
 <!-- form for submitting activity request-->
 <h2 class="formHeader">Have an activity you want others to join? Submit it here <i class="fa-solid fa-arrow-turn-down"></i> </h2>
 <div class="form">
-	 <form class="formContents" action="https://formdump.codeinstitute.net/" method='post'>
+	 <form class="formContents" action="https://formdump.codeinstitute.net/" target="_blank" method='post'>
    <label for="name">Your name:</label> <br>
-  <input type="text" id="name" name="name" value="First name" required> <input type="text" id="name" name="name" value="Last name" required><br>  
+  <input type="text" id="name" name="name" placeholder="First name" required> <input type="text" id="name" name="name" placeholder="Last name" required><br>  
   <label for="activityName">Activity title:</label><br>
-  <input type="text" id="activityName" name="activityName" value="Beach Trip" required><br>
+  <input type="text" id="activityName" name="activityName" placeholder="Beach Trip" required><br>
   <label for="activityDate">Activity date:</label><br>
-  <input type="date" id="activityDate" name="activityDate" value="23rd Aug 2023" required>
+  <input type="date" id="activityDate" name="activityDate" placeholder="23rd Aug 2023" required>
   <label for="activityTIme">Activity time:</label>
-  <input type="time" id="activityTime" name="activityTime" value="10am" required><br>
+  <input type="time" id="activityTime" name="activityTime" placeholder="10am" required><br>
   <label for="activityLocation">Activity location:</label><br>
-  <input type="text" id="activityLocation" name="activityLocation" value="Maidstone" required><br><br>
+  <input type="text" id="activityLocation" name="activityLocation" placeholder="Maidstone" required><br><br>
   <label for="myfile">Upload a picture for your activity</label>
   <input type="file" id="myfile" name="myfile"><br><br>
   <label for="activityDetails">Activity details:</label><br>
