edited alt for images to support accessibility

--- a/activities.html
+++ b/activities.html
@@ -37,7 +37,7 @@
 <div class="flip-card" id="apart1">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img src="../Tribe/assets/images/park.webp" alt="Avatar" style="width:290px;height:300px;">
+  		<img src="../Tribe/assets/images/park.webp" alt="park" style="width:290px;height:300px;">
   		<div>
   			<p>Park Meetup-up</p>
   		</div>
@@ -70,7 +70,7 @@
 <div class="flip-card" id="apart2">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img src="../Tribe/assets/images/coffee.webp" alt="Avatar" style="width:290px;height:300px;">
+  		<img src="../Tribe/assets/images/coffee.webp" alt="coffee cup" style="width:290px;height:300px;">
   		<div>
   			<p>Coffee Meet-up</p>
   		</div>
@@ -102,7 +102,7 @@
 <div class="flip-card" id="apart5">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img src="../Tribe/assets/images/dinner.webp" alt="Avatar" style="width:290px;height:300px;">
+  		<img src="../Tribe/assets/images/dinner.webp" alt="dinner" style="width:290px;height:300px;">
   		<div>
   			<p>Dinner and Cocktails Meetup</p>
   		</div>
@@ -141,7 +141,7 @@
 <div class="flip-card" id="apart1">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img src="../Tribe/assets/images/adults.webp" alt="Avatar" style="width:290px;height:300px;">
+  		<img src="../Tribe/assets/images/adults.webp" alt="adults" style="width:290px;height:300px;">
   		<div>
   			<p>Adults Only Meetup-up</p>
   		</div>
@@ -174,7 +174,7 @@
 <div class="flip-card" id="apart2">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img src="../Tribe/assets/images/beach.webp" alt="Avatar" style="width:290px;height:300px;">
+  		<img src="../Tribe/assets/images/beach.webp" alt="beach" style="width:290px;height:300px;">
   		<div>
   			<p>Beach Meet-up</p>
   		</div>
@@ -206,7 +206,7 @@
 <div class="flip-card" id="apart6">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img src="../Tribe/assets/images/comedy.webp" alt="Avatar" style="width:290px;height:300px;">
+  		<img src="../Tribe/assets/images/comedy.webp" alt="Comedian" style="width:290px;height:300px;">
   		<div>
   			<p>Comedy Night Meetup</p>
   		</div>
