minor text changes to about page

--- a/about.html
+++ b/about.html
@@ -26,8 +26,8 @@
 <div class="activitiesBox">
   <div class="box1">
     <h1 class="aboutpageH2"> Welcome to Tribe</h1>
-    <h2 class="aboutpageH2"> A space to grow relationships and build communities.</h2>
-    <p>Tribe is a dedicated space for the African and Caribbean communities within Kent, a space to make new friendships, explore the area and find local Black Owned businesses. <br> <br>Explore the site to find upcoming activities or <a href ="activities.html">submit</a> your own activity for others to join. </p>
+    <h2 class="aboutpageH2"> A space to grow relationships, share experiences and build communities.</h2>
+    <p>Tribe is a dedicated space for the African and Caribbean community, a space to make new friendships, explore the local area and find local Black Owned businesses. <br> <br>Explore the site to find upcoming <a href ="activities.html">activities</a> or <a href ="activities.html">submit</a> your own activity for others to join. </p>
     </div>
   <div class="box2">
     <img class="img1" src="../Tribe/assets/images/groupphoto.webp" alt="group photo" width="350" height="400">
