added details of the events on offer

--- a/activities.html
+++ b/activities.html
@@ -28,7 +28,13 @@
     </div>
 </div>
 <!-- code for info text -->
-<div class="site-info"> Activities </div>
+<div class="site-info"> 
+	<p>Looking to find new things to do in your local area? <br> Looking to find other like-minded people? <br> Look no further - everything you need is below! </p>
+	</div>
+
+	<div class="pageHeading">
+		<h2>Find your next meet-up! </h2>
+	</div>
 
 <!--container for activities row 1-->
 <div class="outerContainer">
@@ -47,22 +53,22 @@
        	<table>
        		<tr>
     				<td class="table-data">Location -</td>
-    				<td class="table-data">Capstone Park</td>
+    				<td class="table-data2">Capstone Park</td>
     				</tr>
     				<tr>
     				<td class="table-data">Date -</td>
-    				<td class="table-data">3rd Aug 2023</td>
+    				<td class="table-data2">3rd Sept 2023</td>
     				</tr>
     				<tr>
     				<td class="table-data">Time -</td>
-    				<td class="table-data">11am</td>
+    				<td class="table-data2">11am</td>
     				</tr>
     				<tr>
     				<td class="table-data">Meeting Point -</td>
-    				<td class="table-data">Coffee shop</td>
+    				<td class="table-data2">Coffee shop</td>
     				</tr>
 				</table>
-				<p> Join us with the kids for a play in the park </p>
+				<p class="eventText"> Join us with the kids for a play in the park. Capstone Park has free parking and there are plenty of spaces. We will meet outside the coffee shop, come early to grab a coffee and have a chat. Then we'll take a walk around the lake before going into the park. </p>
     </div>
   </div>
 </div> 
@@ -80,22 +86,22 @@
       <table>
        		<tr>
     				<td class="table-data">Location -</td>
-    				<td class="table-data">George Vaults</td>
+    				<td class="table-data2">George Vaults</td>
     				</tr>
     				<tr>
     				<td class="table-data">Date -</td>
-    				<td class="table-data">3rd Aug 2023</td>
+    				<td class="table-data2">6th Sept 2023</td>
     				</tr>
     				<tr>
     				<td class="table-data">Time -</td>
-    				<td class="table-data">11am</td>
+    				<td class="table-data2">1pm</td>
     				</tr>
     				<tr>
     				<td class="table-data">Meeting Point -</td>
-    				<td class="table-data">Coffee shop</td>
+    				<td class="table-data2">Inside Venue</td>
     				</tr>
 				</table>
-				<p> Join us with the kids for a play in the park </p>
+				<p class="eventText"> A relaxed coffee and a cheeky slice of cake <i class="fa-regular fa-face-grin-wink"></i>. George Vaults used to be a church, there are still parts of the church on display. The host will be around for around 3 hours, feel free to pop in and out during that time.</p>
     </div>
   </div>
 </div> 
@@ -108,27 +114,27 @@
   		</div>
         </div>
     <div class="flip-card-back">
-      <h2>Dinner and Cocktails Meetup</h2>
+      <h2>Dinner and Cocktails</h2>
       <table>
        		<tr>
-    				<td class="table-data">Location -</td>
-    				<td class="table-data">Darjeling Heights</td>
+    				<td class="table-data">Location-</td>
+    				<td class="table-data2">Darjeeling Heights</td>
     				</tr>
     				<tr>
     				<td class="table-data">Date -</td>
-    				<td class="table-data">3rd Aug 2023</td>
+    				<td class="table-data2">8th Sept 2023</td>
     				</tr>
     				<tr>
     				<td class="table-data">Time -</td>
-    				<td class="table-data">11am</td>
+    				<td class="table-data2">7pm</td>
     				</tr>
     				<tr>
     				<td class="table-data">Meeting Point -</td>
-    				<td class="table-data">Coffee shop</td>
+    				<td class="table-data2">The table</td>
     				</tr>
 				</table>
-				<p> Join us with the kids for a play in the park </p>
-    </div>
+				<p class="eventText"> Darjeeling Heights is an Indian restaurant, with really good reviews! <a href="https://www.tripadvisor.co.uk/Restaurant_Review-g503915-d2337450-Reviews-Darjeeling_Heights-Rainham_Kent_England.html"  target="_blank">Click here to see.</a> Dress up, grab a taxi and lets make a night of it! Table will be under the name of Adelle - <strong>RSVP</strong> below is essential so you get a seat at the table.</p>
+	    </div>
   </div>
 </div>
 </div>
@@ -151,22 +157,22 @@
        	<table>
        		<tr>
     				<td class="table-data">Location -</td>
-    				<td class="table-data">Capstone Park</td>
+    				<td class="table-data2">Casion Rooms</td>
     				</tr>
     				<tr>
     				<td class="table-data">Date -</td>
-    				<td class="table-data">3rd Aug 2023</td>
+    				<td class="table-data2">15th Sept 2023</td>
     				</tr>
     				<tr>
     				<td class="table-data">Time -</td>
-    				<td class="table-data">11am</td>
+    				<td class="table-data2">9pm</td>
     				</tr>
     				<tr>
     				<td class="table-data">Meeting Point -</td>
-    				<td class="table-data">Coffee shop</td>
+    				<td class="table-data2">Outside Casino Rooms</td>
     				</tr>
 				</table>
-				<p> Join us with the kids for a play in the park </p>
+				<p class="eventText"> Time for a dance - the nights theme is back to the 90's, dress up, gather some song requests and lets boogie. <a href="https://www.casinoroomsnightclub.net/" target="_blank">Tickets</a> can be purchased beforehand at a reduced price or on the door. Please read the dress code on the venues <a href="https://www.casinoroomsnightclub.net/" target="_blank">website</a>. </p>
     </div>
   </div>
 </div> 
@@ -184,22 +190,22 @@
       <table>
        		<tr>
     				<td class="table-data">Location -</td>
-    				<td class="table-data">George Vaults</td>
+    				<td class="table-data2">Margate Beach</td>
     				</tr>
     				<tr>
     				<td class="table-data">Date -</td>
-    				<td class="table-data">3rd Aug 2023</td>
+    				<td class="table-data2">30th Sept 2023</td>
     				</tr>
     				<tr>
     				<td class="table-data">Time -</td>
-    				<td class="table-data">11am</td>
+    				<td class="table-data2">11am</td>
     				</tr>
     				<tr>
     				<td class="table-data">Meeting Point -</td>
-    				<td class="table-data">Coffee shop</td>
+    				<td class="table-data2">on the beach</td>
     				</tr>
 				</table>
-				<p> Join us with the kids for a play in the park </p>
+				<p class="eventText"> Bring the kids (or not!) for a day on the beach. Plenty of things to do, restaurants, arcades, Dreamland, shopping in the old and new towns - Margate has it all. Add your number to the <strong>RSVP</strong> form and the host will send you a message with where to meet and for you to use as a point of contact on the day.  </p>
     </div>
   </div>
 </div> 
@@ -212,26 +218,26 @@
   		</div>
         </div>
     <div class="flip-card-back">
-      <h2>Comedy Night Meetup</h2>
+      <h2>Comedy Night </h2>
       <table>
        		<tr>
     				<td class="table-data">Location -</td>
-    				<td class="table-data">Nucleus Arts Centre</td>
+    				<td class="table-data2">Nucleus Arts Centre</td>
     				</tr>
     				<tr>
     				<td class="table-data">Date -</td>
-    				<td class="table-data">3rd Aug 2023</td>
+    				<td class="table-data2">5th Oct 2023</td>
     				</tr>
     				<tr>
     				<td class="table-data">Time -</td>
-    				<td class="table-data">11am</td>
+    				<td class="table-data2">6pm</td>
     				</tr>
     				<tr>
     				<td class="table-data">Meeting Point -</td>
-    				<td class="table-data">Coffee shop</td>
+    				<td class="table-data2">Inside Venue</td>
     				</tr>
 				</table>
-				<p> Join us with the kids for a play in the park </p>
+				<p class="eventText"> Comedy evening, (not suitable for children) various local acts on show with a local band playing in the interval. Fully licensed bar and food available. Tickets can be booked <a href="https://www.nucleusarts.com/events" target="_blank">here</a>. The host will be there early to secure a table <strong>RSVP</strong> for a spot at the table. Sure be to a night full of laughs!</p>
     </div>
   </div>
 </div> 
