--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
  <!--August HIghlights -->
 
  <div>
- 	<div class="augustHighlights">
+ 	<div class="pageHeading">
  		<h2>Top Picks For August </h2>
  	</div>
  </div>
