started creating a new RSVP form - needs futher work on flex box alignment.

--- a/activities.html
+++ b/activities.html
@@ -222,7 +222,7 @@
       <table>
        		<tr>
     				<td class="table-data">Location -</td>
-    				<td class="table-data2">Nucleus Arts Centre</td>
+    				<td class="table-data2">Nucleus Arts</td>
     				</tr>
     				<tr>
     				<td class="table-data">Date -</td>
@@ -242,10 +242,14 @@
   </div>
 </div> 
 </div>
+</div>
 
 
 <!-- form for submitting activity request-->
 <h2 class="formHeader">Have an activity you want others to join? Submit it here <i class="fa-solid fa-arrow-turn-down"></i> </h2>
+
+<div class="row">
+	<div class="col">
 <div class="form">
 	 <form class="formContents" action="https://formdump.codeinstitute.net/" target="_blank" method='post'>
    <label for="name">Your name:</label> <br>
@@ -262,14 +266,33 @@
   <input type="file" id="myfile" name="myfile"><br><br>
   <label for="activityDetails">Activity details:</label><br>
   <textarea id='activityDetails' cols='50' rows='10' name='activityDetails' placeholder='Add further details of the activity' required></textarea><br><br>
-  <label for="t&cs">Have you read the <a href>Terms and Conditions</a></label><br>
-  <input type="radio" id="yes" name="agree" value="yes" required>
-  <label for="yes">Yes</label><br>
-  <input type="radio" id="no" name="disagree" value="no">
-  <label for="no">No</label><br>
   <input class="formSubmit" type="submit" value="Submit">
 </form>
 </div>
+</div>
+	<div class="col">
+<div class="form">
+	 <form class="formContents" action="https://formdump.codeinstitute.net/" target="_blank" method='post'>
+   <label for="name">Your name:</label> <br>
+  <input type="text" id="name" name="name" placeholder="First name" required> <input type="text" id="name" name="name" placeholder="Last name" required><br>  
+  <label for="activityName">Activity title:</label><br>
+  <input type="text" id="activityName" name="activityName" placeholder="Beach Trip" required><br>
+  <label for="activityDate">Activity date:</label><br>
+  <input type="date" id="activityDate" name="activityDate" placeholder="23rd Aug 2023" required>
+  <label for="activityTIme">Activity time:</label>
+  <input type="time" id="activityTime" name="activityTime" placeholder="10am" required><br>
+  <label for="activityLocation">Activity location:</label><br>
+  <input type="text" id="activityLocation" name="activityLocation" placeholder="Maidstone" required><br><br>
+  <label for="myfile">Upload a picture for your activity</label>
+  <input type="file" id="myfile" name="myfile"><br><br>
+  <label for="activityDetails">Activity details:</label><br>
+  <textarea id='activityDetails' cols='50' rows='10' name='activityDetails' placeholder='Add further details of the activity' required></textarea><br><br>
+  <input class="formSubmit" type="submit" value="Submit">
+</form>
+</div>
+</div>
+</div>
+
 
 <!--footer-->
  <footer>
