changes to make website responsive

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
 	<link rel="stylesheet" type="text/css" href="..\Tribe\assets\style.css">
+  <script src="https://kit.fontawesome.com/e893473805.js" crossorigin="anonymous"></script>
 	<title>Tribe</title>
 	</head>
 
@@ -27,7 +28,7 @@
   <div class="box1">
     <h1 class="aboutpageH2"> Welcome to Tribe</h1>
     <h2 class="aboutpageH2"> A space to grow relationships, share experiences and build communities.</h2>
-    <p>Tribe is a dedicated space for the African and Caribbean community, a space to make new friendships, explore the local area and find local Black Owned businesses. <br> <br>Explore the site to find upcoming <a href ="activities.html">activities</a> or <a href ="activities.html">submit</a> your own activity for others to join. </p>
+    <p>Tribe is a dedicated space for the African and Caribbean community, a space to make new friendships, explore the local area and find local Black Owned businesses. <br> <br>Explore the site to find upcoming <a href="activities.html#activity_section">activities</a> or <a href ="activities.html#activity_section">submit</a> your own activity for others to join. </p>
     </div>
   <div class="box2">
     <img class="img1" src="../Tribe/assets/images/groupphoto.webp" alt="group photo" width="350" height="400">
@@ -35,7 +36,7 @@
 </div>
 
 <footer>
-	<div class="site-info"> created by Adelle King</div>
+	<div class="site-info"> <i class="fa-regular fa-copyright"></i> Adelle King</div>
 </footer>
 </body>
 </html>
