--- a/activities.html
+++ b/activities.html
@@ -8,10 +8,7 @@
    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
    crossorigin=""/>
    <script src="https://kit.fontawesome.com/e893473805.js" crossorigin="anonymous"></script>
-   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-   integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-   crossorigin=""></script>
-	<title>Tribe</title>
+   <title>Tribe</title>
 	</head>
 <body>
 	<div>
@@ -251,7 +248,7 @@
 <div class="row">
 	<div class="col">
 <div class="form">
-	<h2 class="formHeader">Have an activity you want others to join?<br> Submit it here <i class="fa-solid fa-arrow-turn-down"></i> </h2>
+	<h2 class="formHeader" id="activity_section">Have an activity you want others to join?<br> Submit it here <i class="fa-solid fa-arrow-turn-down"></i> </h2>
 	 <form class="formContents" action="https://formdump.codeinstitute.net/" target="_blank" method='post'>
    <label for="name">Your name:</label> <br>
   <input type="text" id="name" name="name" placeholder="First name" required> <input type="text" id="name" name="name" placeholder="Last name" required><br>  
@@ -309,7 +306,7 @@
 
 <!--footer-->
  <footer>
-	<div class="site-info"> created by Adelle King</div>
+	<div class="site-info"> <i class="fa-regular fa-copyright"></i> Adelle King</div>
 </footer>
 </body>
 </html>
