--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
 	<link rel="stylesheet" type="text/css" href="..\Tribe\assets\style.css">
+	<script src="https://kit.fontawesome.com/e893473805.js" crossorigin="anonymous"></script>
 	<title>Tribe</title>
 	</head>
 
@@ -27,9 +28,9 @@
 </div>
 
 <!-- introduction text -->
- <div class="site-info"> Info about the site</div>
+ <div class="site-info"> Tribe is your space to connect, build relationships and explore the local area! <br> FInd other like minded TRIBEsters, find events to hang out and discover new activities - or submit your own activity for others to join! </div>
 
- <!--August HIghlights -->
+ <!--August Highlights -->
 
  <div>
  	<div class="pageHeading">
@@ -57,7 +58,7 @@
 
 </div>
 <footer>
-	<div class="site-info"> created by Adelle King</div>
+	<div class="site-info"> <i class="fa-regular fa-copyright"></i> Adelle King</div>
 </footer>
 </body>
 </html>
